; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/media/tegra-vde/extr_vde.c_tegra_vde_push_to_bsev_icmdqueue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/media/tegra-vde/extr_vde.c_tegra_vde_push_to_bsev_icmdqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_vde = type { i32 }

@ICMDQUE_WR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tegra_vde*, i32, i32)* @tegra_vde_push_to_bsev_icmdqueue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tegra_vde_push_to_bsev_icmdqueue(%struct.tegra_vde* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.tegra_vde*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.tegra_vde* %0, %struct.tegra_vde** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.tegra_vde*, %struct.tegra_vde** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load %struct.tegra_vde*, %struct.tegra_vde** %4, align 8
  %10 = getelementptr inbounds %struct.tegra_vde, %struct.tegra_vde* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @ICMDQUE_WR, align 4
  %13 = call i32 @tegra_vde_writel(%struct.tegra_vde* %7, i32 %8, i32 %11, i32 %12)
  %14 = load %struct.tegra_vde*, %struct.tegra_vde** %4, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @tegra_vde_wait_bsev(%struct.tegra_vde* %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @tegra_vde_writel(%struct.tegra_vde*, i32, i32, i32) #1

declare dso_local i32 @tegra_vde_wait_bsev(%struct.tegra_vde*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
